--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img id="loading-gif" src="https://s12.gifyu.com/images/S5qNY.gif" alt="Loading GIF">
+        <img id="loading-gif" src="https://s12.gifyu.com/images/S5q9v.gif" alt="Loading GIF">
         <img id="overlay-image" src="https://s10.gifyu.com/images/S5qTI.jpg" alt="Overlay Image">
     </div>
     <div class="button-container" id="main-content">
