--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 
     <div class="header">
         <div class="menu-icon">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars"></i> <!-- Hamburger menu icon -->
         </div>
         <div class="logo">LiVE SHOPPING</div>
         <div class="icons">
-            <i class="fas fa-search"></i>
-            <i class="fas fa-shopping-cart"></i>
-            <div class="cart-count">0</div>
-            <i class="fas fa-chevron-down"></i>
+            <i class="fas fa-search"></i> <!-- Search icon -->
+            <i class="fas fa-shopping-cart"></i> <!-- Cart icon -->
+            <div class="cart-count">0</div> <!-- Cart item count -->
+            <i class="fas fa-chevron-down"></i> <!-- Dropdown icon for tracking products -->
         </div>
     </div>
 
