--- a/index.html
+++ b/index.html
@@ -20,27 +20,21 @@
             justify-content: space-between;
             align-items: center;
         }
-        .header .menu-icon {
-            display: flex;
-            align-items: center;
-        }
-        .header .menu-icon i {
+        .header .menu-icon, .header .icons i {
             font-size: 24px;
             cursor: pointer;
         }
         .header .logo {
             font-size: 24px;
             font-weight: bold;
-            text-align: center;
             flex-grow: 1;
+            text-align: center;
         }
         .header .icons {
             display: flex;
             align-items: center;
         }
         .header .icons i {
-            font-size: 24px;
-            cursor: pointer;
             margin-left: 15px;
         }
         .header .cart-count {
@@ -104,6 +98,33 @@
             color: #ff6600;
             font-size: 18px;
             margin-bottom: 10px;
+        }
+        .categories-items {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+        .category-item {
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 10px;
+            width: 100px;
+            text-align: center;
+            margin: 10px;
+            transition: transform 0.3s ease;
+        }
+        .category-item:hover {
+            transform: scale(1.05);
+        }
+        .category-item img {
+            width: 60px;
+            height: auto;
+        }
+        .category-item h3 {
+            font-size: 14px;
+            margin-top: 10px;
         }
         .bottom-nav {
             display: flex;
